# rtsg

./: .gitignore  PROPRIETARY_BOUNDARY.md  README.md  theta_schrodinger_solver.py
docs/: MASTER_PLAN.md  RH_CHAIN_5_SYNTHESIS.md  RH_MASTER_SYNTHESIS.md  architecture_v6_final.md  grf_gravity_as_condensation.md  kdp_metadata.md  manuscript_outline_complete.md  nrte_brain_graph_theory.md  rtsg_super_index.md  section3_theorem_b_regularity.md  section4_discussion_weil_obstructions.md  theorem_architecture_v3.1.md  theory_of_everything.py
src/rust/smarthub-compute/: .gitignore  Cargo.toml  DELIVERY_MANIFEST.md  QUICK_REFERENCE.md
src/rust/smarthub-compute/examples/: example.go
src/rust/smarthub-compute/include/: smarthub_compute.h
src/rust/smarthub-compute/src/: ffi.rs  linalg.rs  padic.rs
wiki/: about.md  agents__agent_ids.md  agents__ai_notes.md  agents__chatgpt_onboarding.md  agents__claude_onboarding.md  agents__delegation_v4.md  agents__delegation_v5_books.md  agents__engine_protocol.md  agents__gemini_onboarding.md  agents__gemini_session5_final.md  agents__gemini_session5_review.md  agents__gemini_ym_d2_assessment.md  agents__grok_onboarding.md  agents__grok_session5.md  agents__index.md  agents__job_board_20260310.md  agents__job_board_20260310_v2.md  agents__mistral_onboarding.md  agents__onboarding.md  agents__perplexity_onboarding.md  agents__session_close.md  agents__start.md  agents__wiki_update_api.md  arena__chess_challenge.md  arena__chinese_models.md  arena__dashboard.md  arena__index.md  arena__intelligence_arena_mar2026.md  biography__apple_war.md  (+315 more)
(+36 files in other folders)
